Display hymie timestamp

--- a/hymie/templates/base.html
+++ b/hymie/templates/base.html
@@ -34,7 +34,7 @@
         {{ maintainer}} <a href="mailto:{{maintainer_email}}">{{maintainer_email}}</a>
     </div>
     <div class="right">
-        <small>version: {{ yaml_timestamp }}</small>
+        <small>hymie: {{ hymie_timestamp }} | app: {{ yaml_timestamp }}</small>
     </div>
 </nav>
 
