--- a/hymie/templates/admin/users.html
+++ b/hymie/templates/admin/users.html
@@ -12,6 +12,18 @@
 <main role="main">
    <div class="album py-5 bg-light">
         <div class="container">
+            {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+            <div class="row">
+            {% for category, message in messages %}
+                <div class="alert alert-{{ category }}" role="alert">
+                    <button type="button" class="close" data-dismiss="alert">×</button>
+                    {{ message }}
+                </div>
+            {% endfor %}
+            </div>
+            {% endif %}
+            {% endwith %}
             <div class="dropdown">
               <button class="btn btn-primary dropdown-toggle" type="button" id="filterStateButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Filtrar por estado
